--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.8.1",
     "next": "^14.0.4",
+    "next-auth": "^4.24.5",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
