fix : 환경 변수 설정 및 초기 작업

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "env-cmd -f .env.local next dev",
+    "build": "env-cmd -f .env.development next build",
+    "start": "next start -p 8080",
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,7 +17,9 @@
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.11.0",
