--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.8.1",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "dotenv": "^16.3.1",
-    "env-cmd": "^10.1.0"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.11.0",
