--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.8.1",
+    "axios": "^1.7.2",
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "next": "^14.0.4",
