--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_API_URL= http://localhost:3000/api
 NEXT_PUBLIC_GOOGLE_CLIENT_ID= 295636379715-o0ilih99a7pm6jv2lmolc7hsch0bh5jo.apps.googleusercontent.com
 NEXT_PUBLIC_GOOGLE_CLIENT_SECRET= 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
+
+NEXTAUTH_SECRET= 6c01cea98349224c2f1f16a12495ae19dev
